# Firmable-AI-Business-Searcher

./: .dockerignore  .env.example  .gitignore  .railwayignore  .vercelignore  ARCHITECTURE.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOY_GUIDE.md  Dockerfile  README.md  TESTING_GUIDE.md  docker-compose.yml  main.py  next.config.mjs  nixpacks.toml  package.json  pnpm-lock.yaml  pyproject.toml  railway.json  railway.toml  requirements.txt  test_scraper.py  vercel.json
api/: __init__.py  agent_tools.py  analyzer.py  chat.py  chunk_search.py  data_store.py  dependencies.py  groq_services.py  index.py  requirements-test.txt  requirements.txt  scraper.py  scraper.py.old  scraper_cache.jsonl  test_agent_tools.py  test_api.py  test_groq_services.py  test_session_isolation.py
api/core/: rate_limiter.py  resilience.py  security.py  settings.py
api/http/: schemas.py
api/routes/: __init__.py  analyze.py  chat.py  system.py
api/services/: ai_analyzer.py  container.py  conversational_agent.py  orchestrator.py
app/: actions.ts  globals.css  layout.tsx  page.tsx
app/api/analyze/: route.ts
app/api/chat/: route.ts
components/: analyzer-form.tsx  chat-interface.tsx  header.tsx  insights-display.tsx
components/ui/: badge.tsx
docs/: CHAT_FIX.md  DEPLOYMENT_ARCHITECTURE.md  DESIGN_UPDATES.md  ENHANCEMENTS.md  KEYWORD_DETECTION_GUIDE.md  PROJECT_SUMMARY.md  QUICK_DEPLOY.md  REQUIREMENTS_CHECKLIST.md  Requirement.md
lib/: auth.ts  rate-limit.ts  types.ts
