[project]
name = "firmable-ai-business-searcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.118.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-groq>=0.1.1",
    "groq>=0.12.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
    "unstructured-client>=0.42.3",
    "unstructured>=0.18.15",
    "uvicorn[standard]>=0.37.0",
    "flashrank>=0.2.10",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "firecrawl-py>=4.3.6",
    "html2text>=2025.4.15",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
]
